--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "target": "esnext",
         "module": "esnext",
+        "allowJs": true,
         "outDir": "docs/js/"
     },
     "include": [
